--- a/contact.html
+++ b/contact.html
@@ -124,8 +124,12 @@
               Sizin Maliyyə Sabitliyiniz</span>
             <!-- <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a> -->
 
-            <!-- <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i> -->
-            </a>
+            <!-- <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i> 
+            </a> -->
+            <select name="membership" id="membership-desktop">
+              <option value="free">AZ</option>
+              <option value="bronze">EN</option>
+            </select>
             <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
           </div>
         </div>
