--- a/index.html
+++ b/index.html
@@ -121,8 +121,12 @@
               Sizin Maliyyə Sabitliyiniz</span>
             <!-- <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a> -->
 
-            <!-- <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i> -->
-            </a>
+            <!-- <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i> 
+            </a> -->
+            <select name="membership" id="membership-desktop">
+              <option value="free">AZ</option>
+              <option value="bronze">EN</option>
+            </select>
             <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
           </div>
         </div>
@@ -467,84 +471,84 @@
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <div class="main-card">
-                    <div class="image-wrapper">
-                      <img src="./assets/img/1.jpeg" alt="Formula driver" />
-                    </div>
-                    <div class="text-wrapper p-4">
-                      <div class="card-tag darkgray">Vergi</div>
-                      <a href="blog-1.html">
+                    <a href="blog-1.html">
+                      <div class="image-wrapper">
+                        <img src="./assets/img/1.jpeg" alt="Formula driver" />
+                      </div>
+                      <div class="text-wrapper p-4">
+                        <div class="card-tag darkgray">Vergi</div>
+
                         <p class="fs-2 primary my-4 fw-600">
                           Əmək haqqının uçotu qrupunun üzləşdiyi çətinliklər hansılardır?
                         </p>
-                      </a>
 
-                      <br />
-                      <p class="card-info mt-2">
-                        Əmək haqqının hesablanması ölçüsündən asılı olmayaraq hər növ müəssisənin yerinə yetirdiyi
-                        yorucu işlərdən biridir...
-                      </p>
-                    </div>
+
+                        <br />
+                        <p class="card-info mt-2">
+                          Əmək haqqının hesablanması ölçüsündən asılı olmayaraq hər növ müəssisənin yerinə yetirdiyi
+                          yorucu işlərdən biridir...
+                        </p>
+                      </div>
+                    </a>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="main-card">
-                    <div class="image-wrapper">
-                      <img src="./assets/img/2.jpeg" alt="Formula driver" />
-                    </div>
-                    <div class="text-wrapper p-4">
-                      <div class="card-tag darkgray">Biznes</div>
-                      <a href="blog-2.html">
+                    <a href="blog-2.html">
+                      <div class="image-wrapper">
+                        <img src="./assets/img/2.jpeg" alt="Formula driver" />
+                      </div>
+                      <div class="text-wrapper p-4">
+                        <div class="card-tag darkgray">Biznes</div>
+
                         <p class="fs-2 primary my-4 fw-600">
                           Mühasibat Sisteminin 2022-ci İl Təhlili
                         </p>
-                      </a>
-
-                      <br />
-                      <p class="card-info mt-2">
-                        Hər bir biznes firması biznesin bütün əməliyyatlarının qeydlərini saxlamaq...
-                      </p>
-                    </div>
+                        <br />
+                        <p class="card-info mt-2">
+                          Hər bir biznes firması biznesin bütün əməliyyatlarının qeydlərini saxlamaq...
+                        </p>
+                      </div>
+                    </a>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="main-card">
-                    <div class="image-wrapper">
-                      <img src="./assets/img/3.jpeg" alt="Formula driver" />
-                    </div>
-                    <div class="text-wrapper p-4">
-                      <div class="card-tag darkgray">Audit</div>
-                      <a href="blog-3.html">
+                    <a href="blog-3.html">
+                      <div class="image-wrapper">
+                        <img src="./assets/img/3.jpeg" alt="Formula driver" />
+                      </div>
+                      <div class="text-wrapper p-4">
+                        <div class="card-tag darkgray">Audit</div>
+
                         <p class="fs-2 primary my-4 fw-600">
                           Auditdə analitikanın əhəmiyyəti nədir?
                         </p>
-                      </a>
-
-                      <br />
-                      <p class="card-info mt-2">
-                        Audit hər bir firmanın maliyyə vəziyyətini və mühasibat hesabatlarının...
-                      </p>
-                    </div>
+                        <br />
+                        <p class="card-info mt-2">
+                          Audit hər bir firmanın maliyyə vəziyyətini və mühasibat hesabatlarının...
+                        </p>
+                      </div>
+                    </a>
                   </div>
                 </div>
                 <div class="swiper-slide">
                   <div class="main-card">
-                    <div class="image-wrapper">
-                      <img src="./assets/img/4.jpeg" alt="Formula driver" />
-                    </div>
-                    <div class="text-wrapper p-4">
-                      <div class="card-tag darkgray">Biznes</div>
-                      <a href="blog-4.html">
+                    <a href="blog-4.html">
+                      <div class="image-wrapper">
+                        <img src="./assets/img/4.jpeg" alt="Formula driver" />
+                      </div>
+                      <div class="text-wrapper p-4">
+                        <div class="card-tag darkgray">Biznes</div>
                         <p class="fs-2 primary my-4 fw-600">
                           Biznes planlamasında mühasibatın rolu
-
                         </p>
-                      </a>
-
-                      <br />
-                      <p class="card-info mt-2">
-                        Mühasibat xidmətləri istənilən biznesin ən vacib...
-                      </p>
-                    </div>
+                        <br />
+                        <p class="card-info mt-2">
+                          Mühasibat xidmətləri istənilən biznesin ən vacib...
+                        </p>
+                      </div>
+                    </a>
                   </div>
                 </div>
                 <!-- <div class="swiper-slide">
