--- a/insights.html
+++ b/insights.html
@@ -127,8 +127,12 @@
                             Sizin Maliyyə Sabitliyiniz</span>
                         <!-- <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a> -->
 
-                        <!-- <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i> -->
-                        </a>
+                        <!-- <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i> 
+                </a> -->
+                        <select name="membership" id="membership-desktop">
+                            <option value="free">AZ</option>
+                            <option value="bronze">EN</option>
+                        </select>
                         <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
                     </div>
                 </div>
@@ -540,185 +544,194 @@
                 <div class="row">
                     <div class="col-12 pos-rel">
                         <h2 class="fs-1-9 mt-60 "> Ən çox oxunanlar</h2>
-
                         <div class="row mt-5">
-                            <div class="col-lg-3">
+                            <div class="col-lg-3 mt-mobile-50 ">
                                 <div class="main-card">
-                                    <div class="image-wrapper">
-                                        <img src="./assets/img/1.jpeg" alt="Formula driver" />
-                                    </div>
-                                    <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">VERGİ</div>
-                                        <a href="blog-1.html">
+                                    <a href="blog-1.html">
+                                        <div class="image-wrapper">
+                                            <img src="./assets/img/1.jpeg" alt="Formula driver" />
+                                        </div>
+                                        <div class="text-wrapper p-4">
+                                            <div class="card-tag darkgray">VERGİ</div>
+
                                             <p class="fs-2 primary my-4 fw-600">
                                                 Əmək haqqı və onun ödənilməsində yaranan çətinliklər.
                                             </p>
-                                        </a>
 
-                                        <br />
-                                        <p class="card-info mt-2">
 
-                                            Əmək haqqının hesablanması ölçüsündən asılı olmayaraq hər növ müəssisənin
-                                            yerinə yetirdiyi biridir...
+                                            <br />
+                                            <p class="card-info mt-2">
 
-                                        </p>
-                                    </div>
+                                                Əmək haqqının hesablanması ölçüsündən asılı olmayaraq hər növ
+                                                müəssisənin
+                                                yerinə yetirdiyi biridir...
+
+                                            </p>
+                                        </div>
+                                    </a>
                                 </div>
                             </div>
-                            <div class="col-lg-3">
+                            <div class="col-lg-3 mt-mobile-50">
                                 <div class="main-card">
-                                    <div class="image-wrapper">
-                                        <img src="./assets/img/2.jpeg" alt="Formula driver" />
-                                    </div>
-                                    <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BİZNES</div>
-                                        <a href="blog-2.html">
+                                    <a href="blog-2.html">
+                                        <div class="image-wrapper">
+                                            <img src="./assets/img/2.jpeg" alt="Formula driver" />
+                                        </div>
+                                        <div class="text-wrapper p-4">
+                                            <div class="card-tag darkgray">BİZNES</div>
+
                                             <p class="fs-2 primary my-4 fw-600">
                                                 Mühasibat Sisteminin 2022-ci İl Təhlili.
                                             </p>
-                                        </a>
 
-                                        <br />
-                                        <p class="card-info mt-2">
-                                            Hər bir biznes firması biznesin bütün əməliyyatlarının qeydlərini
-                                            saxlamaq...
-                                        </p>
-                                    </div>
+
+                                            <br />
+                                            <p class="card-info mt-2">
+                                                Hər bir biznes firması biznesin bütün əməliyyatlarının qeydlərini
+                                                saxlamaq...
+                                            </p>
+                                        </div>
+                                    </a>
                                 </div>
                             </div>
-                            <div class="col-lg-3">
+                            <div class="col-lg-3 mt-mobile-50">
                                 <div class="main-card">
-                                    <div class="image-wrapper">
-                                        <img src="./assets/img/3.jpeg" alt="Formula driver" />
-                                    </div>
-                                    <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">AUDİT</div>
-                                        <a href="blog-3.html">
+                                    <a href="blog-3.html">
+                                        <div class="image-wrapper">
+                                            <img src="./assets/img/3.jpeg" alt="Formula driver" />
+                                        </div>
+                                        <div class="text-wrapper p-4">
+                                            <div class="card-tag darkgray">AUDİT</div>
+
                                             <p class="fs-2 primary my-4 fw-600">
                                                 Auditdə analitikanın əhəmiyyəti nədir?
                                             </p>
-                                        </a>
 
-                                        <br />
-                                        <p class="card-info mt-2">
-                                            Audit hər bir firmanın maliyyə vəziyyətini və mühasibat hesabatlarının...
-                                        </p>
-                                    </div>
+
+                                            <br />
+                                            <p class="card-info mt-2">
+                                                Audit hər bir firmanın maliyyə vəziyyətini və mühasibat
+                                                hesabatlarının...
+                                            </p>
+                                        </div>
+                                    </a>
                                 </div>
                             </div>
-                            <div class="col-lg-3">
+                            <div class="col-lg-3 mt-mobile-50">
                                 <div class="main-card">
-                                    <div class="image-wrapper">
-                                        <img src="./assets/img/4.jpeg" alt="Formula driver" />
-                                    </div>
-                                    <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BİZNES</div>
-                                        <a href="blog-4.html">
+                                    <a href="blog-4.html">
+                                        <div class="image-wrapper">
+                                            <img src="./assets/img/4.jpeg" alt="Formula driver" />
+                                        </div>
+                                        <div class="text-wrapper p-4">
+                                            <div class="card-tag darkgray">BİZNES</div>
                                             <p class="fs-2 primary my-4 fw-600">
-
                                                 Biznes planlamasında mühasibatın rolu.
-
                                             </p>
-                                        </a>
-
-                                        <br />
-                                        <p class="card-info mt-2">
-                                            Mühasibat xidmətləri istənilən biznesin ən vacib...
-                                        </p>
-                                    </div>
+                                            <br />
+                                            <p class="card-info mt-2">
+                                                Mühasibat xidmətləri istənilən biznesin ən vacib...
+                                            </p>
+                                        </div>
+                                    </a>
                                 </div>
                             </div>
                         </div>
 
-                        <h2 class="fs-1-9 mt-50"> Ən son yazılar</h2>
+                        <h2 class="fs-1-9 mt-100"> Ən son yazılar</h2>
 
 
 
-                        <div class="row mt-5">
-                            <div class="col-lg-3">
+                        <div class="row mt-5" style="margin-bottom: 100px;">
+                            <div class="col-lg-3 mt-mobile-50">
                                 <div class="main-card">
-                                    <div class="image-wrapper">
-                                        <img src="./assets/img/1.jpeg" alt="Formula driver" />
-                                    </div>
-                                    <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">VERGİ</div>
-                                        <a href="blog-1.html">
+                                    <a href="blog-1.html">
+                                        <div class="image-wrapper">
+                                            <img src="./assets/img/1.jpeg" alt="Formula driver" />
+                                        </div>
+                                        <div class="text-wrapper p-4">
+                                            <div class="card-tag darkgray">VERGİ</div>
+
                                             <p class="fs-2 primary my-4 fw-600">
                                                 Əmək haqqı və onun ödənilməsində yaranan çətinliklər.
                                             </p>
-                                        </a>
 
-                                        <br />
-                                        <p class="card-info mt-2">
 
-                                            Əmək haqqının hesablanması ölçüsündən asılı olmayaraq hər növ müəssisənin
-                                            yerinə yetirdiyi biridir...
+                                            <br />
+                                            <p class="card-info mt-2">
 
-                                        </p>
-                                    </div>
+                                                Əmək haqqının hesablanması ölçüsündən asılı olmayaraq hər növ
+                                                müəssisənin
+                                                yerinə yetirdiyi biridir...
+
+                                            </p>
+                                        </div>
+                                    </a>
                                 </div>
                             </div>
-                            <div class="col-lg-3">
+                            <div class="col-lg-3 mt-mobile-50">
                                 <div class="main-card">
-                                    <div class="image-wrapper">
-                                        <img src="./assets/img/2.jpeg" alt="Formula driver" />
-                                    </div>
-                                    <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BİZNES</div>
-                                        <a href="blog-2.html">
+                                    <a href="blog-2.html">
+                                        <div class="image-wrapper">
+                                            <img src="./assets/img/2.jpeg" alt="Formula driver" />
+                                        </div>
+                                        <div class="text-wrapper p-4">
+                                            <div class="card-tag darkgray">BİZNES</div>
+
                                             <p class="fs-2 primary my-4 fw-600">
                                                 Mühasibat Sisteminin 2022-ci İl Təhlili.
                                             </p>
-                                        </a>
 
-                                        <br />
-                                        <p class="card-info mt-2">
-                                            Hər bir biznes firması biznesin bütün əməliyyatlarının qeydlərini
-                                            saxlamaq...
-                                        </p>
-                                    </div>
+
+                                            <br />
+                                            <p class="card-info mt-2">
+                                                Hər bir biznes firması biznesin bütün əməliyyatlarının qeydlərini
+                                                saxlamaq...
+                                            </p>
+                                        </div>
+                                    </a>
                                 </div>
                             </div>
-                            <div class="col-lg-3">
+                            <div class="col-lg-3 mt-mobile-50">
                                 <div class="main-card">
-                                    <div class="image-wrapper">
-                                        <img src="./assets/img/3.jpeg" alt="Formula driver" />
-                                    </div>
-                                    <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">AUDİT</div>
-                                        <a href="blog-3.html">
+                                    <a href="blog-3.html">
+                                        <div class="image-wrapper">
+                                            <img src="./assets/img/3.jpeg" alt="Formula driver" />
+                                        </div>
+                                        <div class="text-wrapper p-4">
+                                            <div class="card-tag darkgray">AUDİT</div>
+
                                             <p class="fs-2 primary my-4 fw-600">
                                                 Auditdə analitikanın əhəmiyyəti nədir?
                                             </p>
-                                        </a>
 
-                                        <br />
-                                        <p class="card-info mt-2">
-                                            Audit hər bir firmanın maliyyə vəziyyətini və mühasibat hesabatlarının...
-                                        </p>
-                                    </div>
+
+                                            <br />
+                                            <p class="card-info mt-2">
+                                                Audit hər bir firmanın maliyyə vəziyyətini və mühasibat
+                                                hesabatlarının...
+                                            </p>
+                                        </div>
+                                    </a>
                                 </div>
                             </div>
-                            <div class="col-lg-3">
+                            <div class="col-lg-3 mt-mobile-50">
                                 <div class="main-card">
-                                    <div class="image-wrapper">
-                                        <img src="./assets/img/4.jpeg" alt="Formula driver" />
-                                    </div>
-                                    <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BİZNES</div>
-                                        <a href="blog-4.html">
+                                    <a href="blog-4.html">
+                                        <div class="image-wrapper">
+                                            <img src="./assets/img/4.jpeg" alt="Formula driver" />
+                                        </div>
+                                        <div class="text-wrapper p-4">
+                                            <div class="card-tag darkgray">BİZNES</div>
                                             <p class="fs-2 primary my-4 fw-600">
-
                                                 Biznes planlamasında mühasibatın rolu.
-
                                             </p>
-                                        </a>
-
-                                        <br />
-                                        <p class="card-info mt-2">
-                                            Mühasibat xidmətləri istənilən biznesin ən vacib...
-                                        </p>
-                                    </div>
+                                            <br />
+                                            <p class="card-info mt-2">
+                                                Mühasibat xidmətləri istənilən biznesin ən vacib...
+                                            </p>
+                                        </div>
+                                    </a>
                                 </div>
                             </div>
                         </div>
