--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
               <div class="news-card--title">
                 <a href="insights.html" class="primary">2022-ci ildə bankları ən çox narahat edən risk açıqlandı...</a>
               </div>
-              <div class="news-card--text mt-44">
+              <div class="news-card--text mt-44 mt-0">
                 “2022-ci ildə bizi narahat edən ən böyük amil dünyadakı bahalaşmadır. Artıq Azərbaycanda inflyasiya
                 göstəricisi əmanət faizlərindən yüksəkdir və belə bir vəziyyət əmanətlərin artmasını zəiflədə, hətta
                 azalmasına səbəb ola bilər”.
@@ -684,7 +684,7 @@
               <div class="news-card--title">
                 <a href="insights.html" class="primary">Vergi Məcəlləsində edilmiş dəyişikliklər...</a>
               </div>
-              <div class="news-card--text mt-44">
+              <div class="news-card--text mt-44 mt-0">
                 Vergi Məcəlləsində edilmiş dəyişikliklərdən biri bank hesabları barədə məlumatların vergi orqanına
                 təqdim edilməsi ilə bağlıdır. Bu barədə İqtisadiyyat Nazirliyi yanında Dövlət Vergi Xidmətinin
                 açıqlamasında bildirilir.
@@ -698,7 +698,7 @@
                 <a href="insights.html" class="primary">Yerli istehsalın təşviqi ilə bağlı vergi tənzimləmələri həyata
                   keçiriləcək</a>
               </div>
-              <div class="news-card--text mt-44">
+              <div class="news-card--text mt-44 mt-0">
                 Yerli istehsalın təşviqi ilə bağlı vergi tənzimləmələri həyata keçiriləcək”
                 İqtisadiyyat Nazirliyi yanında Dövlət Vergi Xidmətinin rəis müavini Samirə Musayevanın müsahibəsini
                 təqdim edirik.
