--- a/audit-1.html
+++ b/audit-1.html
@@ -419,7 +419,7 @@
         <section id="service-breadcrumb" class="white-bg">
             <div class="container pos-rel white-bg background ">
                 <div class="row background-height align-items-center">
-                    <div class="col-6   fw-600 service-title">Vergi auditi xidmətləri</div>
+                    <div class="col-6   fw-600 service-title">Vergi hesabatlarının auditi</div>
 
                 </div>
             </div>
