--- a/audit-4.html
+++ b/audit-4.html
@@ -410,7 +410,7 @@
                         <p class="fs-1-9 primary hover-cc custom-before me-5">
                             Xidmətlərimiz
                         </p>
-                        <p class="fs-1-9 primary hover-cc custom-before">Məsləhət</p>
+                        <p class="fs-1-9 primary hover-cc custom-before">Audit</p>
                         <p class="fs-1-9 primary hover-cc custom-before ms-5">Nizamnamə kapitalının formalaşdırılmasın
                             auditi</p>
                     </div>
