--- a/foreign-custom.html
+++ b/foreign-custom.html
@@ -410,9 +410,8 @@
                         <p class="fs-1-9 primary hover-cc custom-before me-5">
                             Xidmətlərimiz
                         </p>
-                        <p class="fs-1-9 primary hover-cc custom-before">Məsləhət</p>
-                        <p class="fs-1-9 primary hover-cc custom-before ms-5">Muhasibat uçotunun aparılması üzrə autsors
-                            xidməti</p>
+                        <p class="fs-1-9 primary hover-cc custom-before">Gömrük Xidmətləri</p>
+                        <p class="fs-1-9 primary hover-cc custom-before ms-5">Xarici ticarət və gömrük xidmətləri</p>
                     </div>
                 </div>
             </div>
