--- a/services-accountment-3.html
+++ b/services-accountment-3.html
@@ -405,7 +405,7 @@
             <p class="fs-1-9 primary hover-cc custom-before me-5">
               Xidmətlərimiz
             </p>
-            <p class="fs-1-9 primary hover-cc custom-before">Məsləhət</p>
+            <p class="fs-1-9 primary hover-cc custom-before">Mühasibatlıq Xidmətləri</p>
             <p class="fs-1-9 primary hover-cc custom-before ms-5">Şirkət rəhbərliyinə xərclər və gəlirlilik haqqında
               hesabatların hazırlanması</p>
           </div>
