--- a/services-accountment-2.html
+++ b/services-accountment-2.html
@@ -405,7 +405,7 @@
             <p class="fs-1-9 primary hover-cc custom-before me-5">
               Xidmətlərimiz
             </p>
-            <p class="fs-1-9 primary hover-cc custom-before">Məsləhət</p>
+            <p class="fs-1-9 primary hover-cc custom-before">Mühasibatlıq Xidmətləri</p>
             <p class="fs-1-9 primary hover-cc custom-before ms-5">Maliyyə uçotunun aparılması üzrə autsors xidmətləri
             </p>
           </div>
@@ -508,22 +508,21 @@
             </div>
           </div>
           <div class="col-12 col-lg-7 text-area pl-80">
-            <p class="fs-2-5 fw-600 my-5">
-              Sürətli, Dəqiq Maliyyə Hesabatını əldə edin
+
+            <p class="fs-1-7  ls-2 lh-30 my-5">
+              Sizin maliyyə uçotunuz yalnız əməliyyatları heablamaq və maliyyə hesabatları hazırlamaq deyil. Maliyyə
+              uçotunuz şirkətiniz haqqında fikir yaratmalı və təşkilatınızın əməliyyatlarına və gəlirliliyinə təsir
+              edəcək strategilararı seçmənizə kömək etməlidir.
             </p>
             <p class="fs-1-7  ls-2 lh-30 my-5">
-              Biznesinizin gəlirli işləməsinə və sürətlə böyüməsinə kömək etmək üçün sizin muhasibat uçotunun üzrə
-              autsors xidmətinə ehtiyacınız
+              Siz və təşkilatınız üçün daha yaxşı nəticələr əldə etmək üçün istedadımızı, mühasibat təcrübəmizi, sənaye
+              ixtisasımızı və texnologiyadan istifadəmizi birləşdirərək autsors şirkətiniz olaraq xidmət edə bilərik ki,
+              diqqətinizi biznesinizi idarə etməyə və hədəflərinizə çata biləsinizdir.
             </p>
             <p class="fs-1-7  ls-2 lh-30 my-5">
-              Etibar edə biləcəyiniz maliyyə. Effektiv və uyğun mühasibat prosesləri. Biznesinizlə ayaqlaşmaq bacarığı.
-              Şirkətinizin inamla irəliləməsi üçün lazım olan bacarıq və biliklər. Arxa ofisiniz bütün bunları və daha
-              çoxunu çatdırmalıdır.
-            </p>
-            <p class="fs-1-7  ls-2 lh-30 my-5">
-              Biz sahibkarlıq anlayışını təqdim edirik və sizə vaxtında maliyyə məlumatı veririk. Biz bilirik ki,
-              maliyyə hesabatları sizin hekayənizi izah edir. Sənaye insayderlərinə, KPI-lərə çıxışınız olduqda və
-              maliyyə hesabatlarınızı müqayisə etmək sürət və sürət təmin edir.
+              FA Audit Consulting olaraq öz həllimizi sizin xüsusi vəziyyətinizə ən yaxşı şəkildə uyğunlaşdıracağıq.
+              Bizimlə əməktaşlıq etmək yeni ideyalar kəşf etmənizə və yeni perspektivlər qazanmağınıza imkan verir.
+              İnkişafınıza necə kömək edə biləcəyimizi görmək üçün vaxt itirmədən bizimlə əlaqə saxlayın.
             </p>
 
 
