--- a/services-tax-4.html
+++ b/services-tax-4.html
@@ -405,7 +405,7 @@
             <p class="fs-1-9 primary hover-cc custom-before me-5">
               Xidmətlərimiz
             </p>
-            <p class="fs-1-9 primary hover-cc custom-before">Məsləhət</p>
+            <p class="fs-1-9 primary hover-cc custom-before">Vergi</p>
             <p class="fs-1-9 primary hover-cc custom-before ms-5">Vergi sahəsində sair xidmətlər</p>
           </div>
         </div>
